src/src/out
In file included from /usr/local/include/boost/detail/endian.hpp:9,
                 from /usr/include/libtorrent/config.hpp:53,
                 from /usr/include/libtorrent/entry.hpp:61,
                 from client_test.cpp:2:
/usr/local/include/boost/predef/detail/endian_compat.h:11:161: note: #pragma message: The use of BOOST_*_ENDIAN and BOOST_BYTE_ORDER is deprecated. Please include <boost/predef/other/endian.h> and use BOOST_ENDIAN_*_BYTE instead
   11 | #pragma message("The use of BOOST_*_ENDIAN and BOOST_BYTE_ORDER is deprecated. Please include <boost/predef/other/endian.h> and use BOOST_ENDIAN_*_BYTE instead")
      |                                                                                                                                                                 ^
client_test.cpp: In function ‘int main(int, char**)’:
client_test.cpp:20:52: error: no match for ‘operator=’ (operand types are ‘boost::shared_ptr<libtorrent::torrent_info>’ and ‘std::shared_ptr<libtorrent::torrent_info>’)
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:547:18: note: candidate: ‘boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<T>&) [with T = libtorrent::torrent_info]’
  547 |     shared_ptr & operator=( shared_ptr const & r ) BOOST_SP_NOEXCEPT
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:547:48: note:   no known conversion for argument 1 from ‘std::shared_ptr<libtorrent::torrent_info>’ to ‘const boost::shared_ptr<libtorrent::torrent_info>&’
  547 |     shared_ptr & operator=( shared_ptr const & r ) BOOST_SP_NOEXCEPT
      |                             ~~~~~~~~~~~~~~~~~~~^
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:556:18: note: candidate: ‘template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<Y>&) [with Y = Y; T = libtorrent::torrent_info]’
  556 |     shared_ptr & operator=(shared_ptr<Y> const & r) BOOST_SP_NOEXCEPT
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:556:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘const boost::shared_ptr<X>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:567:18: note: candidate: ‘template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&) [with Y = Y; T = libtorrent::torrent_info]’
  567 |     shared_ptr & operator=( std::auto_ptr<Y> & r )
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:567:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘std::auto_ptr<_Up>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:576:18: note: candidate: ‘template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&&) [with Y = Y; T = libtorrent::torrent_info]’
  576 |     shared_ptr & operator=( std::auto_ptr<Y> && r )
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:576:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘std::auto_ptr<_Up>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:598:18: note: candidate: ‘template<class Y, class D> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::unique_ptr<_Up, _Ep>&&) [with Y = Y; D = D; T = libtorrent::torrent_info]’
  598 |     shared_ptr & operator=( std::unique_ptr<Y, D> && r )
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:598:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘std::unique_ptr<_Tp, _Dp>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:607:18: note: candidate: ‘template<class Y, class D> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::movelib::unique_ptr<Y, D>) [with Y = Y; D = D; T = libtorrent::torrent_info]’
  607 |     shared_ptr & operator=( boost::movelib::unique_ptr<Y, D> r )
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:607:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘boost::movelib::unique_ptr<Y, D>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:658:18: note: candidate: ‘boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<T>&&) [with T = libtorrent::torrent_info]’
  658 |     shared_ptr & operator=( shared_ptr && r ) BOOST_SP_NOEXCEPT
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:658:43: note:   no known conversion for argument 1 from ‘std::shared_ptr<libtorrent::torrent_info>’ to ‘boost::shared_ptr<libtorrent::torrent_info>&&’
  658 |     shared_ptr & operator=( shared_ptr && r ) BOOST_SP_NOEXCEPT
      |                             ~~~~~~~~~~~~~~^
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:665:18: note: candidate: ‘template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<Y>&&) [with Y = Y; T = libtorrent::torrent_info]’
  665 |     shared_ptr & operator=( shared_ptr<Y> && r ) BOOST_SP_NOEXCEPT
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:665:18: note:   template argument deduction/substitution failed:
client_test.cpp:20:52: note:   ‘std::shared_ptr<libtorrent::torrent_info>’ is not derived from ‘boost::shared_ptr<X>’
   20 |   p.ti = std::make_shared<lt::torrent_info>(argv[1]);
      |                                                    ^
In file included from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/smart_ptr.hpp:19,
                 from /usr/include/libtorrent/settings_pack.hpp:41,
                 from /usr/include/libtorrent/session.hpp:48,
                 from client_test.cpp:4:
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:683:18: note: candidate: ‘boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::detail::sp_nullptr_t) [with T = libtorrent::torrent_info; boost::detail::sp_nullptr_t = std::nullptr_t]’
  683 |     shared_ptr & operator=( boost::detail::sp_nullptr_t ) BOOST_SP_NOEXCEPT
      |                  ^~~~~~~~
/usr/local/include/boost/smart_ptr/shared_ptr.hpp:683:29: note:   no known conversion for argument 1 from ‘std::shared_ptr<libtorrent::torrent_info>’ to ‘boost::detail::sp_nullptr_t’ {aka ‘std::nullptr_t’}
  683 |     shared_ptr & operator=( boost::detail::sp_nullptr_t ) BOOST_SP_NOEXCEPT
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
